tests/init/neg/closureLeak.check
-- Error: tests/init/neg/closureLeak.scala:11:14 -----------------------------------------------------------------------
11 |    l.foreach(a => a.addX(this)) // error
   |              ^^^^^^^^^^^^^^^^^
   |     Promoting the value to fully-initialized is unsafe. May only use initialized value as arguments
   |
   |     The unsafe promotion may cause the following problem(s):
   |
   |     1. Promote the value under initialization to fully-initialized. May only use initialized value as arguments
